--- a/TalentoHumano/templates/TalentoHumano/_common/_tarjeta_empleado.html
+++ b/TalentoHumano/templates/TalentoHumano/_common/_tarjeta_empleado.html
@@ -4,7 +4,7 @@
         <div class="card-body border-faded border-top-0 border-left-0 border-right-0 rounded-top">
             <div class="d-flex flex-row align-items-center">
                 <span class="status status-success mr-3">
-                    <span class="rounded-circle profile-image d-block " style="background-image:url({% static 'EVA/Plantilla/img/profile.png' %}); background-size: cover;"></span>
+                    <span class="rounded-circle profile-image d-block " style="background-image:url({{ foto_perfil }}); background-size: cover;"></span>
                 </span>
                 <div class="info-card-text flex-1">
                     <a href="javascript:void(0);" class="fs-xl text-truncate text-truncate-lg text-info" data-toggle="dropdown" aria-expanded="false">
@@ -15,7 +15,6 @@
                         <a class="dropdown-item" href="{% url 'TalentoHumano:colaboradores-perfil' id_tarjeta %}">Ver perfil</a>
                         <a class="dropdown-item" href="{% url 'TalentoHumano:colaboradores-editar' id_tarjeta %}">Editar</a>
                         <a class="dropdown-item" href="javascript:void(0);" id="eliminar_{{ id_tarjeta }}"   onclick="fConfirmarEliminarColaborador({{ id_tarjeta }})">Eliminar</a>
-                        <a class="dropdown-item" href="#">Bloquear</a>
                     </div>
                     <span class="text-truncate text-truncate-xl">{{ cargo }}</span>
                 </div>
