--- a/TalentoHumano/templates/TalentoHumano/Colaboradores/perfil.html
+++ b/TalentoHumano/templates/TalentoHumano/Colaboradores/perfil.html
@@ -57,9 +57,6 @@
                                                                         <i class="fas fa-mobile-alt text-muted mr-2"></i></a>
                                                                     <a href="mailto: {{ colaborador.usuario.email }}" class="fs-xl" >
                                                                         <i class="fas fa-envelope text-muted mr-2"></i></a>
-                                                                    <a href="javascript:void(0);" class="fs-xl" style="color:#00AFF0">
-                                                                        <i class="fab fa-skype"></i>
-                                                                    </a>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -74,7 +71,7 @@
                                                         <div class="col-6">
                                                             <div class="text-center py-3">
                                                                 <h5 class="mb-0 fw-700">
-                                                                    {{ colaborador.jefe_inmediato }}
+                                                                    {{ colaborador.jefe_inmediato.nombre_completo }}
                                                                     <small class="text-muted mb-0">Jefe inmediato</small>
                                                                 </h5>
                                                             </div>
@@ -161,7 +158,7 @@
                                                                     <b>Fecha de expedición:</b> {{ colaborador.fecha_expedicion|date:'Y-m-d' }}
                                                                 </small>
                                                                 <small class="mt-0 mb-3 text-muted">
-                                                                    <b>Género:</b> {{ colaborador.genero }}
+                                                                    <b>Género:</b> {% if colaborador.genero == 'M' %} Masculino {% elif colaborador.genero == 'F' %} Femenino {% else %} Otro {% endif %}
                                                                 </small>
                                                                 <small class="mt-0 mb-3 text-muted">
                                                                     <b>Fecha de nacimiento:</b> {{ colaborador.fecha_nacimiento|date:'Y-m-d' }}
@@ -185,7 +182,7 @@
                                                         <div class="p-3">
                                                             <h5>
                                                                 <small class="mt-0 mb-3 text-muted">
-                                                                    <b>Jefe inmediato:</b> {{ colaborador.jefe_inmediato }}
+                                                                    <b>Jefe inmediato:</b> {{ colaborador.jefe_inmediato.nombre_completo }}
                                                                 </small>
                                                                 <small class="mt-0 mb-3 text-muted">
                                                                     <b>Contrato:</b> {{ colaborador.contrato }}
