--- a/TalentoHumano/templates/TalentoHumano/Colaboradores/index.html
+++ b/TalentoHumano/templates/TalentoHumano/Colaboradores/index.html
@@ -1,7 +1,7 @@
 {% extends 'TalentoHumano/_common/base_talento_humano.html' %}
 {% load static %}
 {% load eva_tags %}
-<title>{% block titulo %}Colaboradores{% endblock %}</title>
+<title>{% block titulo %}{% if OPCION == 'por_contratos' %} Colaboradores vinculados al contrato {{ colaborador.contrato }}{% else %} Colaboradores{% endif %}{% endblock %}</title>
 {% block styles %}
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-regular.css' %}">
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-brands.css' %}">
@@ -16,7 +16,7 @@
     <div class="panel-container show">
         <div class="header">
             <h1 class="header-title">
-                <i class='far fa-user'></i> Colaboradores <span class='fw-300'></span>
+                <i class='far fa-user'></i> {% if OPCION == 'por_contratos' %} Colaboradores vinculados al contrato {{ colaborador.contrato }}{% else %} Colaboradores{% endif %} <span class='fw-300'></span>
                 <br>
                 <br>
             </h1>
@@ -27,9 +27,15 @@
                     <div class="panel-hdr">
                         <br>
                         <div class="col-md-10">
+                            {% if OPCION == 'por_contratos' %}
+                            <small>
+                                <a class="far fa-3x far fa-home"  href="{% url 'TalentoHumano:colaboradores-index' %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Ir al índice de colaboradores"></a>
+                            </small>
+                            {% else %}
                             <small>
                                 <a class="far fa-3x far fa-plus-circle"  href="{% url 'TalentoHumano:colaboradores-crear' %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Agregar Colaborador"></a>
                             </small>
+                            {% endif %}
                         </div>
                     </div>
                     <div class="panel-container show">
