--- a/Administracion/templates/Administracion/inicio_sesion/iniciar-sesion.html
+++ b/Administracion/templates/Administracion/inicio_sesion/iniciar-sesion.html
@@ -1,18 +1,11 @@
 <!DOCTYPE html>
 {% load static %}
-<!--
-Template Name:  SmartAdmin Responsive WebApp - Template build with Twitter Bootstrap 4
-Version: 4.0.2
-Author: Sunnyat Ahmmed
-Website: http://gootbootstrap.com
-Purchase: https://wrapbootstrap.com/theme/smartadmin-responsive-webapp-WB0573SK0
-License: You must have a valid license purchased only from wrapbootstrap.com (link above) in order to legally use this theme for your project.
--->
+
 <html lang="en">
     <head>
         <meta charset="utf-8">
         <title>
-            Login - - SmartAdmin v4.0.2
+            Inicio de sesión EVA
         </title>
         <meta name="description" content="Login">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -30,83 +23,51 @@ License: You must have a valid license purchased only from wrapbootstrap.com (li
         <link rel="mask-icon" href="{% static 'EVA/Plantilla/img/favicon/safari-pinned-tab.svg'%}" color="#5bbad5">
         <!-- Optional: page related CSS-->
         <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-brands.css'%}">
+        <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/custom/generales.css' %}">
     </head>
     <body>
         <div class="page-wrapper">
             <div class="page-inner bg-brand-gradient">
                 <div class="page-content-wrapper bg-transparent m-0">
-                    <div class="height-10 w-100 shadow-lg px-4 bg-brand-gradient">
-                        <div class="d-flex align-items-center container p-0">
-                            <div class="page-logo width-mobile-auto m-0 align-items-center justify-content-center p-0 bg-transparent bg-img-none shadow-0 height-9">
-                                <a href="javascript:void(0)" class="page-logo-link press-scale-down d-flex align-items-center">
-                                    <img src="img/logo.png" alt="SmartAdmin WebApp" aria-roledescription="logo">
-                                    <span class="page-logo-text mr-1">SmartAdmin WebApp</span>
-                                </a>
-                            </div>
-                            <a href="page_register.html" class="btn-link text-white ml-auto">
-                                Create Account
-                            </a>
-                        </div>
-                    </div>
-                    <div class="flex-1" style="background: url(img/svg/pattern-1.svg) no-repeat center bottom fixed; background-size: cover;">
+
+                    <div class="flex-1" style="background: url('{% static 'EVA/Plantilla/img/svg/pattern-1.svg'%}') no-repeat center bottom fixed; background-size: cover ">
                         <div class="container py-4 py-lg-5 my-lg-5 px-4 px-sm-0">
                             <div class="row">
                                 <div class="col col-md-6 col-lg-7 hidden-sm-down">
                                     <h2 class="fs-xxl fw-500 mt-4 text-white">
-                                        The simplest UI toolkit for developers &amp; programmers
+                                        Espacio Virtual  Arios
                                         <small class="h3 fw-300 mt-3 mb-5 text-white opacity-60">
-                                            Presenting you with the next level of innovative UX design and engineering. The most modular toolkit available with over 600+ layout permutations. Experience the simplicity of SmartAdmin, everywhere you go!
+                                            Inicio de sesión
                                         </small>
                                     </h2>
-                                    <a href="#" class="fs-lg fw-500 text-white opacity-70">Learn more &gt;&gt;</a>
-                                    <div class="d-sm-flex flex-column align-items-center justify-content-center d-md-block">
-                                        <div class="px-0 py-1 mt-5 text-white fs-nano opacity-50">
-                                            Find us on social media
-                                        </div>
-                                        <div class="d-flex flex-row opacity-70">
-                                            <a href="#" class="mr-2 fs-xxl text-white">
-                                                <i class="fab fa-facebook-square"></i>
-                                            </a>
-                                            <a href="#" class="mr-2 fs-xxl text-white">
-                                                <i class="fab fa-twitter-square"></i>
-                                            </a>
-                                            <a href="#" class="mr-2 fs-xxl text-white">
-                                                <i class="fab fa-google-plus-square"></i>
-                                            </a>
-                                            <a href="#" class="mr-2 fs-xxl text-white">
-                                                <i class="fab fa-linkedin"></i>
-                                            </a>
-                                        </div>
-                                    </div>
                                 </div>
                                 <div class="col-sm-12 col-md-6 col-lg-5 col-xl-4 ml-auto">
                                     <h1 class="text-white fw-300 mb-3 d-sm-block d-md-none">
                                         Secure login
                                     </h1>
                                     <div class="card p-4 rounded-plus bg-faded">
-                                        <form id="js-login" novalidate="" action="intel_analytics_dashboard.html">
+                                        <img src="{% static 'EVA/Plantilla/img/logo-arios-tr.png' %}" style="width: 100%">
+                                        <br>
+                                        <form action="{% url 'Administracion:iniciar-sesion' %}" id="iniciar-sesion-form" method="post" class="needs-validation" novalidate>
+                                            {% csrf_token %}
                                             <div class="form-group">
-                                                <label class="form-label" for="username">Username</label>
-                                                <input type="email" id="username" class="form-control form-control-lg" placeholder="your id or email" value="drlantern@gotbootstrap.com" required>
-                                                <div class="invalid-feedback">No, you missed this one.</div>
-                                                <div class="help-block">Your unique username to app</div>
+                                                <label class="form-label" for="usuario">Usuario</label>
+                                                <input type="text" id="username" class="form-control" placeholder="Digite su usuario"  required>
+                                                <div class="invalid-feedback">Por favor digite su usuario</div>
                                             </div>
                                             <div class="form-group">
-                                                <label class="form-label" for="password">Password</label>
-                                                <input type="password" id="password" class="form-control form-control-lg" placeholder="password" value="password123" required>
-                                                <div class="invalid-feedback">Sorry, you missed this one.</div>
-                                                <div class="help-block">Your password</div>
+                                                <label class="form-label" for="contraseña">Contraseña</label>
+                                                <input type="password" id="password" class="form-control form-control-lg" placeholder="Digite su contraseña"  required>
+                                                <div class="invalid-feedback">Por favor ingrese su contraseña</div>
                                             </div>
                                             <div class="form-group text-left">
-                                                <div class="custom-control custom-checkbox">
-                                                    <input type="checkbox" class="custom-control-input" id="rememberme">
-                                                    <label class="custom-control-label" for="rememberme"> Remember me for the next 30 days</label>
-                                                </div>
+                                               <a href="javascript:void(0)" >
+                                                   ¿Olvidó su contraseña?
+                                                </a>
                                             </div>
                                             <div class="row no-gutters">
-
                                                 <div class="col-lg-6 pl-lg-1 my-2">
-                                                    <button id="js-login-btn" type="submit" class="btn btn-danger btn-block btn-lg">Secure login</button>
+                                                    <button id="js-login-btn" type="submit" class="btn btn-danger btn-block btn-lg">Iniciar sesión</button>
                                                 </div>
                                             </div>
                                         </form>
@@ -131,8 +92,9 @@ License: You must have a valid license purchased only from wrapbootstrap.com (li
 						+ waves.js (extension)
 						+ smartpanels.js (extension)
 						+ src/../jquery-snippets.js (core) -->
-        <script src="js/vendors.bundle.js"></script>
-        <script src="js/app.bundle.js"></script>
+        <script src="{% static 'EVA/Plantilla/js/vendors.bundle.js' %}"></script>
+        <script src="{% static 'EVA/Plantilla/js/app.bundle.js'%}"></script>
+        <script src="{% static 'EVA/Plantilla/js/custom/validaciones/validar_formulario.js' %}"></script>
         <script>
             $("#js-login-btn").click(function(event)
             {
@@ -152,4 +114,5 @@ License: You must have a valid license purchased only from wrapbootstrap.com (li
 
         </script>
     </body>
+{% include 'EVA/_common/footer.html' %}
 </html>
