--- a/Administracion/templates/Administracion/inicio_sesion/iniciar-sesion.html
+++ b/Administracion/templates/Administracion/inicio_sesion/iniciar-sesion.html
@@ -2,117 +2,127 @@
 {% load static %}
 
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>
-            Inicio de sesión EVA
-        </title>
-        <meta name="description" content="Login">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no, minimal-ui">
-        <!-- Call App Mode on ios devices -->
-        <meta name="apple-mobile-web-app-capable" content="yes" />
-        <!-- Remove Tap Highlight on Windows Phone IE -->
-        <meta name="msapplication-tap-highlight" content="no">
-        <!-- base css -->
-        <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/vendors.bundle.css' %}">
-        <link rel="stylesheet" media="screen, print" href="{% static  'EVA/Plantilla/css/app.bundle.css' %}">
-        <!-- Place favicon.ico in the root directory -->
-        <link rel="apple-touch-icon" sizes="180x180" href="{% static 'EVA/Plantilla/img/favicon/apple-touch-icon.png'%}">
-        <link rel="icon" type="image/png" sizes="32x32" href="{% static 'EVA/Plantilla/img/favicon/favicon-32x32.png'%}">
-        <link rel="mask-icon" href="{% static 'EVA/Plantilla/img/favicon/safari-pinned-tab.svg'%}" color="#5bbad5">
-        <!-- Optional: page related CSS-->
-        <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-brands.css'%}">
-        <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/custom/generales.css' %}">
-    </head>
-    <body>
-        <div class="page-wrapper">
-            <div class="page-inner bg-brand-gradient">
-                <div class="page-content-wrapper bg-transparent m-0">
+<head>
+    <meta charset="utf-8">
+    <title>
+        Inicio de sesión EVA
+    </title>
+    <meta name="description" content="Login">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no, minimal-ui">
+    <!-- Call App Mode on ios devices -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <!-- Remove Tap Highlight on Windows Phone IE -->
+    <meta name="msapplication-tap-highlight" content="no">
+    <!-- base css -->
+    <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/vendors.bundle.css' %}">
+    <link rel="stylesheet" media="screen, print" href="{% static  'EVA/Plantilla/css/app.bundle.css' %}">
+    <!-- Place favicon.ico in the root directory -->
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'EVA/Plantilla/img/favicon/apple-touch-icon.png'%}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'EVA/Plantilla/img/favicon/favicon-32x32.png'%}">
+    <link rel="mask-icon" href="{% static 'EVA/Plantilla/img/favicon/safari-pinned-tab.svg'%}" color="#5bbad5">
+    <!-- Optional: page related CSS-->
+    <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-brands.css'%}">
+    <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/custom/generales.css' %}">
+    <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/notifications/toastr/toastr.css' %}">
+</head>
+<body>
+<div class="messages">
+    {% if messages %}
+        {% for message in messages %}
+            <input class="alert.{{ message.tags }}" style="display: none" id="mensaje" value="{{ message }}">
+        {% endfor %}
+    {% endif %}
+</div>
+<div class="page-wrapper">
+    <div class="page-inner bg-brand-gradient">
+        <div class="page-content-wrapper bg-transparent m-0">
 
-                    <div class="flex-1" style="background: url('{% static 'EVA/Plantilla/img/svg/pattern-1.svg'%}') no-repeat center bottom fixed; background-size: cover ">
-                        <div class="container py-4 py-lg-5 my-lg-5 px-4 px-sm-0">
-                            <div class="row">
-                                <div class="col col-md-6 col-lg-7 hidden-sm-down">
-                                    <h2 class="fs-xxl fw-500 mt-4 text-white">
-                                        Espacio Virtual  Arios
-                                        <small class="h3 fw-300 mt-3 mb-5 text-white opacity-60">
-                                            Inicio de sesión
-                                        </small>
-                                    </h2>
-                                </div>
-                                <div class="col-sm-12 col-md-6 col-lg-5 col-xl-4 ml-auto">
-                                    <h1 class="text-white fw-300 mb-3 d-sm-block d-md-none">
-                                        Secure login
-                                    </h1>
-                                    <div class="card p-4 rounded-plus bg-faded">
-                                        <img src="{% static 'EVA/Plantilla/img/logo-arios-tr.png' %}" style="width: 80%">
-                                        <br>
-                                        <form action="{% url 'Administracion:iniciar-sesion' %}" id="iniciar-sesion-form" method="post" class="needs-validation" novalidate>
-                                            {% csrf_token %}
-                                            <div class="form-group">
-                                                <label class="form-label" for="usuario">Usuario</label>
-                                                <input type="text" id="username" class="form-control" placeholder="Digite su usuario"  required>
-                                                <div class="invalid-feedback">Por favor digite su usuario</div>
-                                            </div>
-                                            <div class="form-group">
-                                                <label class="form-label" for="contraseña">Contraseña</label>
-                                                <input type="password" id="password" class="form-control form-control-lg" placeholder="Digite su contraseña"  required>
-                                                <div class="invalid-feedback">Por favor ingrese su contraseña</div>
-                                            </div>
-                                            <div class="form-group text-left">
-                                               <a href="javascript:void(0)" >
-                                                   ¿Olvidó su contraseña?
-                                                </a>
-                                            </div>
-                                            <div class="row no-gutters">
-                                                <div class="col-lg-6 pl-lg-1 my-2">
-                                                    <button id="js-login-btn" type="submit" class="btn btn-danger btn-block btn-lg">Iniciar sesión</button>
-                                                </div>
-                                            </div>
-                                        </form>
+            <div class="flex-1" style="background: url('{% static 'EVA/Plantilla/img/svg/pattern-1.svg'%}') no-repeat center bottom fixed; background-size: cover ">
+                <div class="container py-4 py-lg-5 my-lg-5 px-4 px-sm-0">
+                    <div class="row">
+                        <div class="col col-md-6 col-lg-7 hidden-sm-down">
+                            <h2 class="fs-xxl fw-500 mt-4 text-white">
+                                Espacio Virtual  Arios
+                                <small class="h3 fw-300 mt-3 mb-5 text-white opacity-60">
+                                    Inicio de sesión
+                                </small>
+                            </h2>
+                        </div>
+                        <div class="col-sm-12 col-md-6 col-lg-5 col-xl-4 ml-auto">
+                            <h1 class="text-white fw-300 mb-3 d-sm-block d-md-none">
+                                Secure login
+                            </h1>
+                            <div class="card p-4 rounded-plus bg-faded">
+                                <img src="{% static 'EVA/Plantilla/img/logo-arios-tr.png' %}" style="width: 80%">
+                                <br>
+                                <form action="{% url 'Administracion:iniciar-sesion' %}" id="iniciar-sesion-form" method="post" class="needs-validation" novalidate>
+                                    {% csrf_token %}
+                                    <div class="form-group">
+                                        <label class="form-label" for="usuario">Usuario</label>
+                                        <input type="text" id="username" name="username" class="form-control" placeholder="Digite su usuario"  required>
+                                        <div class="invalid-feedback">Por favor digite su usuario</div>
                                     </div>
-                                </div>
+                                    <div class="form-group">
+                                        <label class="form-label" for="contraseña">Contraseña</label>
+                                        <input type="password" id="password" name="password" class="form-control form-control-lg" placeholder="Digite su contraseña"  required style="font-size: 0.8125rem;">
+                                        <div class="invalid-feedback">Por favor ingrese su contraseña</div>
+                                    </div>
+                                    <div class="form-group text-left">
+                                        <a href="javascript:void(0)" >
+                                            ¿Olvidó su contraseña?
+                                        </a>
+                                    </div>
+                                    <div class="row no-gutters">
+                                        <div class="col-lg-6 pl-lg-1 my-2">
+                                            <button id="js-login-btn" type="submit" class="btn btn-danger btn-block btn-lg">Iniciar sesión</button>
+                                        </div>
+                                    </div>
+                                </form>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- base vendor bundle:
-			 DOC: if you remove pace.js from core please note on Internet Explorer some CSS animations may execute before a page is fully loaded, resulting 'jump' animations
-						+ pace.js (recommended)
-						+ jquery.js (core)
-						+ jquery-ui-cust.js (core)
-						+ popper.js (core)
-						+ bootstrap.js (core)
-						+ slimscroll.js (extension)
-						+ app.navigation.js (core)
-						+ ba-throttle-debounce.js (core)
-						+ waves.js (extension)
-						+ smartpanels.js (extension)
-						+ src/../jquery-snippets.js (core) -->
-        <script src="{% static 'EVA/Plantilla/js/vendors.bundle.js' %}"></script>
-        <script src="{% static 'EVA/Plantilla/js/app.bundle.js'%}"></script>
-        <script src="{% static 'EVA/Plantilla/js/custom/validaciones/validar_formulario.js' %}"></script>
-        <script>
-            $("#js-login-btn").click(function(event)
-            {
+    </div>
+</div>
+<!-- base vendor bundle:
+     DOC: if you remove pace.js from core please note on Internet Explorer some CSS animations may execute before a page is fully loaded, resulting 'jump' animations
+                + pace.js (recommended)
+                + jquery.js (core)
+                + jquery-ui-cust.js (core)
+                + popper.js (core)
+                + bootstrap.js (core)
+                + slimscroll.js (extension)
+                + app.navigation.js (core)
+                + ba-throttle-debounce.js (core)
+                + waves.js (extension)
+                + smartpanels.js (extension)
+                + src/../jquery-snippets.js (core) -->
+<script src="{% static 'EVA/Plantilla/js/vendors.bundle.js' %}"></script>
+<script src="{% static 'EVA/Plantilla/js/app.bundle.js'%}"></script>
+<script src="{% static 'EVA/Plantilla/js/custom/validaciones/validar_formulario.js' %}"></script>
+<script src="{% static 'EVA/Plantilla/js/notifications/toastr/toastr.js' %}"></script>
+<script src="{% static 'EVA/Plantilla/js/custom/notificacion_toast.js' %}"></script>
+<script>
+    $("#js-login-btn").click(function(event)
+    {
 
-                // Fetch form to apply custom Bootstrap validation
-                var form = $("#js-login")
+        // Fetch form to apply custom Bootstrap validation
+        var form = $("#js-login")
 
-                if (form[0].checkValidity() === false)
-                {
-                    event.preventDefault()
-                    event.stopPropagation()
-                }
+        if (form[0].checkValidity() === false)
+        {
+            event.preventDefault()
+            event.stopPropagation()
+        }
 
-                form.addClass('was-validated');
-                // Perform ajax submit here...
-            });
+        form.addClass('was-validated');
+        // Perform ajax submit here...
+    });
 
-        </script>
-    </body>
+</script>
+</body>
 {% include 'EVA/_common/footer.html' %}
 </html>
