--- a/EVA/templates/EVA/_common/base.html
+++ b/EVA/templates/EVA/_common/base.html
@@ -57,7 +57,7 @@
                             <div class="info-card-text">
                                 <a href="#" class="d-flex align-items-center text-white">
                                     <span class="text-truncate text-truncate-sm d-inline-block">
-                                        Nombre Usuario.
+                                        {{  request.user.first_name.split | first }}{{ ' ' }}{{ request.user.last_name.split | first }}
                                     </span>
                                 </a>
                                 <span class="d-inline-block text-truncate text-truncate-sm">ARIOS Ingeniería</span>
