--- a/Administracion/templates/Administracion/inicio_sesion/iniciar-sesion.html
+++ b/Administracion/templates/Administracion/inicio_sesion/iniciar-sesion.html
@@ -66,7 +66,7 @@
                                     <div class="form-group">
                                         <label class="form-label" for="contraseña">Contraseña</label>
                                         <input type="password" id="password" name="password" class="form-control form-control-lg" placeholder="Digite su contraseña"  required style="font-size: 0.8125rem;">
-                                        <div class="invalid-feedback">Por favor ingrese su contraseña</div>
+                                        <div class="invalid-feedback">Por favor digite su contraseña</div>
                                     </div>
                                     <div class="form-group text-left">
                                         <a href="javascript:void(0)" >
