--- a/EVA/templates/EVA/_common/base.html
+++ b/EVA/templates/EVA/_common/base.html
@@ -53,7 +53,7 @@
                             </div>
                         </div>
                         <div class="info-card">
-                            <img src="{% static 'EVA/Plantilla/img/demo/avatars/avatar-admin.png' %}" class="profile-image rounded-circle" alt="Nombre Usuario">
+                            <img src="{{ request.session.colaborador }}" class="profile-image rounded-circle" alt="Nombre Usuario">
                             <div class="info-card-text">
                                 <a href="#" class="d-flex align-items-center text-white">
                                     <span class="text-truncate text-truncate-sm d-inline-block">
