--- a/EVA/templates/EVA/_common/header.html
+++ b/EVA/templates/EVA/_common/header.html
@@ -61,7 +61,7 @@
         <!-- app user menu -->
         <div>
             <a href="#" data-toggle="dropdown" title="Usuario" class="header-icon d-flex align-items-center justify-content-center ml-2">
-                <img src="{% static 'EVA/Plantilla/img/demo/avatars/avatar-admin.png' %}" class="profile-image rounded-circle" alt="Nombre Usuario">
+                <img src="{{ request.session.colaborador }}" class="profile-image rounded-circle" alt="Nombre Usuario">
                 <!-- you can also add username next to the avatar with the codes below:-->
                 <span class="ml-1 mr-1 text-truncate text-truncate-header hidden-xs-down">{{ request.user.username }}</span>
                 <i class="ni ni-chevron-down hidden-xs-down"></i>
@@ -70,7 +70,7 @@
                 <div class="dropdown-header bg-trans-gradient d-flex flex-row py-4 rounded-top">
                     <div class="d-flex flex-row align-items-center mt-1 mb-1 color-white">
                         <span class="mr-2">
-                            <img src="{% static 'EVA/Plantilla/img/demo/avatars/avatar-admin.png' %}" class="rounded-circle profile-image" alt="Nombre  Usuario">
+                            <img src="{{ request.session.colaborador }}" class="rounded-circle profile-image" alt="Nombre  Usuario">
                         </span>
                         <div class="info-card-text">
                             <div id="identificacion_us" class="fs-lg text-truncate text-truncate-lg">{{ request.user.first_name.split | first }}{{ ' ' }}{{ request.user.last_name.split | first }}</div>
