--- a/Administracion/templates/Administracion/_common/_modal_seleccion_empresa.html
+++ b/Administracion/templates/Administracion/_common/_modal_seleccion_empresa.html
@@ -4,7 +4,7 @@
             <h4 class="modal-title">
                 Empresas
                 <small class="m-0 text-muted">
-                    Selección de Empresa
+                    Seleccione una Empresa
                 </small>
             </h4>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -17,7 +17,6 @@
                 <tr>
                     <th>Id</th>
                     <th>Nombre</th>
-                    <th>Id Ppal</th>
                     <th>Acción</th>
                 </tr>
                 </thead>
@@ -26,9 +25,8 @@
                     <tr>
                         <td>{{ empresa.contrato.empresa.id }}</td>
                         <td>{{ empresa.contrato.empresa.nombre }}</td>
-                        <td>{{ empresa.contrato.empresa.empresa_ppal.id }}</td>
                         <td>
-                            <button type="button" class="btn btn-info" onclick="clicEmpresa({{ empresa.contrato.empresa.id }})">
+                            <button type="button" class="btn btn-primary" onclick="clicEmpresa({{ empresa.contrato.empresa.id }})">
                                 Seleccionar
                             </button>
                         </td>
@@ -37,10 +35,6 @@
                 </tbody>
             </table>
         </div>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-secondary waves-effect waves-themed" data-dismiss="modal">Cancelar
-            </button>
-            <button type="button" class="btn btn-primary waves-effect waves-themed">Guardar</button>
-        </div>
+
     </div>
 </div>
